# Graphics_CW

Exercice_2/: CMakeCache.txt  CMakeLists.txt  Makefile  cgExercise02  main01.cpp  shader02.frag  shader02.vert
Exercice_3/: Makefile  exo3  shader02.vert
Exercice_4/: CMakeLists.txt  Makefile  cgExercise01  cgExercise03  cgExercise04a  cgExercise04b  cmake_install.cmake  main03.cpp  main04a.cpp  report.txt  shader02.frag  shader03.geom  shader04a.frag  shader04a.geom  shader04a.vert  shader04b.frag  yourOwnTexture.ppm
